# tether

./: .gitignore  Cargo.toml  LICENSE  QWEN.md  README.md  run.sh  start.sh
.github/pages/: index.html
.github/pages/css/: docs.css
.github/pages/docs/: architecture.html  faq.html  getting-started.html  security.html
.github/pages/js/: docs.js
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: index.html  login.html
assets/css/: style.css
assets/js/: app.js
src/: auth.rs  main.rs  pty_manager.rs  server.rs  state.rs  terminal_mirror.rs  tmux_manager.rs  ws_handler.rs
tests/: integration_test.rs
